--- a/xo.html
+++ b/xo.html
@@ -28,6 +28,7 @@
     </div>
 
     <!-- Link to your JS file -->
-    <script src="mm.js"></script>
+    <script src="xo.js"></script>
 </body>
 </html>
+
